# Maricraft-private

./: .gitignore  AGENTS.md  CLAUDE.md  DEBUG_MARICRAFT.bat  INSTALL.bat  INSTALL_BEDROCK_PACK.bat  README.md  RUN_MARICRAFT.bat  TECHNICAL.md  bedrock_test_report_20251206_195947.json  bedrock_test_report_20251206_200816.json  bedrock_test_report_20251206_201516.json  bedrock_test_report_20251206_202244.json  bedrock_test_report_20251206_202544.json  bedrock_test_report_20251206_202642.json  bedrock_test_report_20251206_202816.json  bedrock_test_report_20251206_203318.json  bedrock_test_report_20251206_203422.json  bedrock_test_report_20251206_203632.json  bedrock_test_report_20251206_204318.json  bedrock_test_report_20251206_205047.json  bedrock_test_report_20251206_205305.json  bedrock_test_report_20251206_205556.json  bedrock_test_report_20251206_210115.json  bedrock_test_report_20251206_210232.json  bedrock_test_report_20251206_210608.json  bedrock_test_report_20251206_211111.json  bedrock_test_report_20251206_220151.json  bedrock_test_report_20251206_220858.json  bedrock_test_report_20251206_221342.json  bedrock_test_report_20251206_221625.json  bedrock_test_report_20251206_222025.json  build.bat  log.txt  maricraft.spec  maricraft_log.txt  prompt.md  pyproject.toml  version.json
documentation/: 1.20-and-up-syntax_doc.md  1.21.1-command-playbook.md  2025_scoring_systems_openai_research.md  2025_scoring_systems_openai_research_v2.md  DESIGN_POLISH_GATE.md  INDEX.md  POLISH_GATE.md  agent-evaluation-guide.md  ai-prompt-example.md  example-cataclysm-gear.md  index.md  (+3 more)
(+598 files in other folders)
