[project]
name = "maricraft"
version = "1.0.0"
description = "Kid-friendly Minecraft command helper for Windows"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyautogui>=0.9.54",
    "pygetwindow>=0.0.9",
    "pyperclip>=1.8.2",
]

[project.optional-dependencies]
build = [
    "pyinstaller>=6.0",
]

[dependency-groups]
dev = []
